Fixed message overlapping login. Changed Sign in color

--- a/messaging/messaging/client/css/global.css
+++ b/messaging/messaging/client/css/global.css
@@ -261,6 +261,7 @@ body {
   margin-top: .5rem;
   padding: .25rem 2rem .1rem 3rem;
   min-height: 36px;
+  z-index: -1;
 }
 
 /* line 11, ../tests/sass/components/_message.scss */
@@ -393,12 +394,18 @@ body {
 }
 
 #login-buttons {
+  color: #fff;
   padding-right: 2em;
 }
 
 #login-dropdown-list {
   top: 30px;
   left: -170px;
+}
+
+.login-link-text {
+  color: #fff;
+  text-decoration: none;
 }
 
 #site_header {
